<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewCardsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="17dp"
        android:text="@string/nombre_de_la_carta"
        app:layout_constraintBottom_toTopOf="@+id/new_titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:hint="@string/escribe_nombre_aqui"
        android:inputType=""
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_carta"
        app:layout_constraintBottom_toTopOf="@+id/new_context"
        app:layout_constraintStart_toStartOf="@+id/new_titulo"
        app:layout_constraintTop_toBottomOf="@+id/new_titulo" />

    <EditText
        android:id="@+id/new_context"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:autofillHints=""
        android:hint="@string/ej_robot_bestia"
        android:inputType=""
        app:layout_constraintBottom_toTopOf="@+id/btn_image"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/btn_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="94dp"
        android:background="@drawable/baseline_camera_enhance_black_18dp"
        app:layout_constraintBottom_toTopOf="@+id/img_preview"
        app:layout_constraintStart_toStartOf="@+id/new_context"
        app:layout_constraintTop_toBottomOf="@+id/new_context" />


    <ImageView
        android:id="@+id/img_preview"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/imgpreview"
        app:layout_constraintBottom_toTopOf="@+id/btn_publicar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_image" />

    <Button
        android:id="@+id/btn_publicar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:text="@string/publicar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_preview" />

</android.support.constraint.ConstraintLayout>